Replace Init Files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 <!-- 
 
 Hello Camper!
