Update image id
Update some ids to pass all of the content tests.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <h2>*INSERT TRIBUTE NAME HERE*</h2>
     </div>
     <div id="img-div">
-      <img id="img" src="image/penguin.png"></img>
-      <p>Insert descriptive caption of image.</p>
+      <img id="image" src="image/penguin.png"></img>
+      <figcaption id="img-caption">Insert descriptive caption of image.</figcaption>
     </div>
     <div id="tribute-info">
       <p>Insert tribute description</p>
     </div>
-    <div id="tribute-link">
-      <a href="#" target="_blank">Link to more information</a>
+    <div id="info-link">
+      <a id="tribute-link" href="#" target="_blank">Link to more information</a>
     </div>
   </main>
 </body>
