--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h2>*INSERT TRIBUTE NAME HERE*</h2>
     </div>
     <div id="img-div">
-      <img id="image" src="image/penguin.png"></img>
+      <img id="image" src="penguin.png"></img>
       <figcaption id="img-caption">Insert descriptive caption of image.</figcaption>
     </div>
     <div id="tribute-info">
