--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+  <meta content="utf-8" http-equiv="encoding">
 </head>
 <body>
   <main id="main">
     <div id="title">
-      <h2>*INSERT TRIBUTE NAME HERE*</h2>
+      <h4>Seeing in black and white.</h4>
+      <h2>Ansel Adams</h2>
     </div>
     <div id="img-div">
       <img id="image" src="penguin.png"></img>
       <figcaption id="img-caption">Insert descriptive caption of image.</figcaption>
     </div>
-    <div id="tribute-info">
-      <p>Insert tribute description</p>
-    </div>
-    <div id="info-link">
-      <a id="tribute-link" href="#" target="_blank">Link to more information</a>
+    <div id=info-div>
+      <div id="tribute-info">
+        <p>Insert tribute description</p>
+      </div>
+      <div id="info-link">
+        <a id="tribute-link" href="#" target="_blank">Link to more information</a>
+      </div>
     </div>
   </main>
 </body>
