color,layout changes, added photo
Changed the color and layout of the page, making the header more defined. removed the placeholder image and added a different one.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <main id="main">
-    <div id="title">
-      <h4>Seeing in black and white.</h4>
-      <h2>Ansel Adams</h2>
+    <div id="heading">
+      <h1 id="title">Ansel Adams</h1>
+      <h4 id="subtitle">The Master</h4>
     </div>
     <div id="img-div">
-      <img id="image" src="penguin.png"></img>
-      <figcaption id="img-caption">Insert descriptive caption of image.</figcaption>
+      <img id="image" src="tetons-snake-river.png"></img>
+      <figcaption id="img-caption"> One of Adams' works, The Tetons and The Snake River, taken in 1942 at The Grand Teton National Park in Wyoming. </figcaption>
     </div>
     <div id=info-div>
       <div id="tribute-info">
