--- a/index.html
+++ b/index.html
@@ -18,21 +18,16 @@
       <figcaption id="img-caption"> One of Adams' works, The Tetons and The Snake River, taken in 1942 at The Grand Teton National Park in Wyoming. </figcaption>
     </div>
     <div id=info-div>
+      <hr></hr>
       <div id="tribute-info">
-        <p>Insert tribute description</p>
+        <p>Ansel Adams (February 20, 1902 – April 22, 1984) was an American landscape photographer and environmentalist known for his black-and-white images of the American West.</p>
+        <p>Adams was a life-long advocate for environmental conservation, and his photographic practice was deeply entwined with this advocacy. At age 12, he was given his first camera during his first visit to Yosemite National Park. He developed his early photographic work as a member of the Sierra Club. He was later contracted with the United States Department of the Interior to make photographs of national parks. For his work and his persistent advocacy, which helped expand the National Park system, he was awarded the Presidential Medal of Freedom in 1980.</p>
       </div>
       <div id="info-link">
-        <a id="tribute-link" href="#" target="_blank">Link to more information</a>
+        <p> View his
+        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Ansel_Adams" target="_blank">Wikipedia</a>
+         page for more information.</p>
       </div>
     </div>
   </main>
 </body>
-<!--
-
-Hello Camper!
-
-For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding!
-
-- The freeCodeCamp Team
-
--->
